iwyg port to rails3: devise shows up and jquery is in

--- a/app/views/page/index.de.html.erb
+++ b/app/views/page/index.de.html.erb
@@ -12,7 +12,7 @@
   </div>  
   <div class="subcol2">
     <h3><b><%= t("title.login") %></b></h3>
-    <%# render :partial => "share/login" %>
+    <%= render :partial => "share/login" %>
   </div>  
 </div>
 <div class="clearfix"></div>
