--- a/app/views/share/_topnavigation.html.erb
+++ b/app/views/share/_topnavigation.html.erb
@@ -6,11 +6,11 @@
     <ul class="profile menu">
       <li><%= link_to t("topnavigation.profile"), profile_path(current_user.login)%></li>
       <li><%= nav_link t('topnavigation.mailbox'), "mailbox" %></li>
-      <li><%= nav_link t("topnavigation.logout"), "logout" %></li>
+      <li><%= link_to t("topnavigation.logout"), destroy_user_session_path, :method => :delete %></li>
     <% else %>
     <ul class="menu horizontal">
-      <li><%# nav_link t("topnavigation.register"), new_user_registration_path %></li>      
-      <li>&nbsp;&#124;&nbsp;<%# nav_link t("topnavigation.login"), new_user_session_path %></li>
+      <li><%= link_to t("topnavigation.register"), new_user_registration_path %></li>      
+      <li>&nbsp;&#124;&nbsp;<%= link_to t("topnavigation.login"), new_user_session_path %></li>
     <% end %>
     </ul>    
   </div>
