--- a/app/views/share/_login.html.erb
+++ b/app/views/share/_login.html.erb
@@ -3,7 +3,7 @@
   <%= form_for(:user, :url => user_session_path) do |f| -%>
     <p>
       <label for="login"><%= t("login.label.login") %></label>
-      <%= f.text_field :login %>
+      <%= f.text_field :username %>
     </p>
     <br />
     <p>
