--- a/app/views/share/_event_fields.html.erb
+++ b/app/views/share/_event_fields.html.erb
@@ -3,12 +3,12 @@
     :as  => :string,
     :required => false, 
     :input_html => {:class => "ui-corner-all"},
-    :label => (t("formtastic.labels.event.from") + "&nbsp;" + h image_tag("icons/icon_event.png"))
+    :label => (t("formtastic.labels.event.from") + "&nbsp;" + h image_tag("icons/icon_event.png").html_safe!)
 
 %>
 <%= f.input :till,  
     :as  => :string,
     :required => false, 
     :input_html => {:class => "ui-corner-all"},
-    :label => (t("formtastic.labels.event.till") + "&nbsp;" + image_tag("icons/icon_event.png"))
+    :label => (t("formtastic.labels.event.till") + "&nbsp;" + image_tag("icons/icon_event.png").html_safe!)
 %>
