--- a/app/views/locations/_nested_form_location.html.erb
+++ b/app/views/locations/_nested_form_location.html.erb
@@ -3,7 +3,7 @@
  <%= @map.to_html if @map %>
 <% end %>
 <%= render "share/map" %>
-<% f.inputs do %>
+<%= f.inputs do %>
   <% f.semantic_fields_for :location do |location_form| %>
     
     <%= location_form.input :address, :required => false, :label => t("formtastic.labels.location.address") %>
