--- a/app/views/userdetails/_form.html.erb
+++ b/app/views/userdetails/_form.html.erb
@@ -19,10 +19,15 @@
     );
   
     /* AUTOCOMPLETE AND LISTBUILDER */
-    $(" #user_aim_list ").listbuilder({autocomplete:{source: '/items/tag_suggestions.js?c=aims'}});
+    $(" #user_aim_list ").listbuilder({delimiter: ",", autocomplete:{source: '/items/tag_suggestions.js?c=aims'}});
     $(" #user_skill_list ").listbuilder({autocomplete:{source: '/items/tag_suggestions.js?c=skills'}});
     $(" #user_interest_list ").listbuilder({autocomplete:{source: '/items/tag_suggestions.js?c=interests'}});
     $(" #user_wish_list ").listbuilder({autocomplete:{source: '/items/tag_suggestions.js?c=wishes'}});
+    $(".ui-listbuilder-input").addClass("noEnterSubmit");
+    $(".noEnterSubmit").keypress(function(e){
+        if ( e.which == 13 ) return false;
+    //    if ( e.which == 13 ) e.preventDefault();
+    });
   
     /* STYLING */
     $('.ui-listbuilder-input').addClass('ui-corner-all');
@@ -31,7 +36,7 @@
 	</script>
 <% end %>
 
-<% semantic_form_for @user, :html => {:multipart => true} do |form| %>
+<%= semantic_form_for @user, :html => {:multipart => true} do |form| %>
   <%= form.error_messages %>
   <div id="tabs">  
     <ul>
@@ -68,7 +73,7 @@
     <div id="avatar"> 
       <div class="image">
           <p class="center"><%= image_tag smallThumb(@user) %></p>
-          <% form.semantic_fields_for :images do |image_form| %>
+          <%= form.semantic_fields_for :images do |image_form| %>
             <%= image_form.input :imageable_id, :as => :hidden, :value => @imageable.id if @user.images.count == 0 %>
             <%= image_form.input :imageable_type, :as => :hidden, :value => @imageable.class if @user.images.count == 0 %>
             <div class="options center">
@@ -79,7 +84,7 @@
       </div>
     </div>
   </div>  
-  <% form.buttons do %>
+  <%= form.buttons do %>
     <br />
     <%= form.submit t("save") %>
   <% end %>
