--- a/public/stylesheets/jquery.listbuilder.css
+++ b/public/stylesheets/jquery.listbuilder.css
@@ -1,13 +1,14 @@
 /*list builder styles*/
 
-.ui-listbuilder{ background:none !important; border:none !important; width: 80% !important;}
+.ui-listbuilder{ background:none !important; border:none !important; width: 80% !important; padding: 0; margin-top: -0.5em;}
 .ui-listbuilder-items{padding:3px 4px 0;margin:0;overflow:hidden; width: 80% !important;}
 .ui-listbuilder-item{list-style-type:none;border:1px solid #A4B895;position:relative;float:left;padding:1px 18px 5px 3px !important; margin:0.2em !important;height:20px;}
 .ui-listbuilder-item a { font-weight:normal !important;}
 .ui-state-hover {background:white !important; border: 1px solid #B5E095 !important;}
 .ui-listbuilder-item span { font-weight:normal !important;}
 .ui-listbuilder-item-input{border:0; margin-bottom:0em !important;}
-.ui-listbuilder-input{border:1px solid #A4B895; width: 89% !important;}
+.ui-listbuilder-input{border:1px solid #A4B895;}
+.ui-listbuilder-input input { width: 89%;}
 .ui-listbuilder-item > .ui-icon {float:right; position:absolute; right:2px; top:4px; width:16px; height:16px;}
 div.ui-state-active {display:none !important;}
 
