--- a/app/views/items/_itemstatus_with_users.html.erb
+++ b/app/views/items/_itemstatus_with_users.html.erb
@@ -1,1 +1,1 @@
-<%= t("resources.#{is_needed?(item)}") %> <%= t("by") + " " %> <%= link_to owner.login, profile_path(owner.login) %>
+<%= t("resources.#{is_needed?(item)}").html_safe %> <%= t("by").html_safe + " " %> <%= link_to owner.login.html_safe, profile_path(owner.login) %>
