--- a/app/views/items/_itempreview.html.erb
+++ b/app/views/items/_itempreview.html.erb
@@ -1,9 +1,10 @@
 <li class="box ui-corner-all"> 
   <p class="font-small">
+    <%= link_to item.owner.login, profile_path(item.owner) %><br />
     <%= image_tag "icons/icon_#{item.itemtype.downcase}.png", :title => item.localized_itemtype, :alt => item.localized_itemtype %>&nbsp;
     <%= link_to shorten(item.title, 22), item_path(item) %>
     <br />
-    Distance: has to be built...<br />
+    <%= t("distance") %>: <%= mainitem.locations.first.distance_to(item.locations.first) %> km<br />
     <%= distance_of_time_in_words(item.created_at, Time.now) %> <%= t("ago") %>
   </p>
 </li>
