--- a/app/views/items/_usermenu.html.erb
+++ b/app/views/items/_usermenu.html.erb
@@ -1,9 +1,9 @@
 <% if logged_in? and current_user.login == owner(item) %>
   <ul class="horizontal usermenu ui-corner-all">
-    <li><%= link_to image_tag("icons/icon_edit.png", :title => t("edit"), :alt => t("edit")), edit_polymorphic_path([@user, item]) %></li>
-    <li><%= link_to image_tag("icons/icon_delete.png", :title => t("delete"), :alt => t("delete")), 
+    <li><%= link_to image_tag("icons/icon_edit.png", :title => t("edit").html_safe, :alt => t("edit").html_safe), edit_polymorphic_path([@user, item]) %></li>
+    <li><%= link_to image_tag("icons/icon_delete.png", :title => t("delete").html_safe, :alt => t("delete").html_safe), 
           {:action => "destroy", :id => item},
-          :confirm => t("confirm_delete"),
+          :confirm => t("confirm_delete").html_safe,
           :method => :delete %>
     </li>
   </ul>
