--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,19 +3,19 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <%= stylesheet_link_tag "style", "formtastic", "formtastic_changes", "jquery.autocomplete", :cache => 'base' %>
+  <%= stylesheet_link_tag "style", "token-input", "formtastic", "formtastic_changes", "jquery.autocomplete", :cache => 'base' %>
   <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
   <%= javascript_include_tag :defaults %> 
   <%# javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" %> 
   <%= javascript_include_tag "jquery.ui.min.js" %> 
   <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>                                               
-  <%# javascript_include_tag "jquery.dataTables.js" %>
-  <%# stylesheet_link_tag "themes/base/ui.theme.css" %>   
+  <%= javascript_include_tag "jquery.tokeninput" %>
   <%= stylesheet_link_tag "themes/iwyg/jquery.ui.theme.css" %>  
   <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %> 
   <%= javascript_include_tag "i18n/jquery-ui-i18n.js" %>
   <%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("public/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
+  <%= csrf_meta_tag %>
   
   <script type="text/javascript">
     $(document).ready(function (){    
@@ -31,8 +31,6 @@
   </script>
   
   <%= javascript_include_tag "jquery.url" %>
-  <%# ajaxful_rating_style %>
-
   <%= yield :head %>
   
   <script type="text/javascript">
