--- a/app/views/share/_items_given_taken.html.erb
+++ b/app/views/share/_items_given_taken.html.erb
@@ -8,9 +8,9 @@
         end
       %>
       <% if params[:user_id] %>
-        <%= image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count =>  resources[itemType.title.downcase.to_sym][action].size ) %>
+        <%= image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count =>  resources[itemType.title.downcase.to_sym][action].size ).html_safe %>
       <% else %>
-        <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => resources[itemType.title.downcase.to_sym][action].size ), 
+        <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => resources[itemType.title.downcase.to_sym][action].size ).html_safe, 
             items_path( "search[item_type_id_equals]" => itemType.id, "search[need_equals]" => need)
         %>
       <% end %>
