--- a/app/views/items/_itempreview.html.erb
+++ b/app/views/items/_itempreview.html.erb
@@ -4,7 +4,9 @@
     <%= image_tag "icons/icon_#{item.itemtype.downcase}.png", :title => item.localized_itemtype, :alt => item.localized_itemtype %>&nbsp;
     <%= link_to shorten(item.title, 22), item_path(item) %>
     <br />
-    <%= t("distance") %>: <%= mainitem.locations.first.distance_to(item.locations.first) %> km<br />
+    <p><%= item.locations.first.city %></p>        
+   <!-- <%= t("distance") %>: <%= "%.0f" % mainitem.locations.first.distance_from([item.locations.first.lat,item.locations.first.lng]) %> km -->
+   <br />
     <%= distance_of_time_in_words(item.created_at, Time.now) %> <%= t("ago") %>
   </p>
 </li>
