--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
     <div id="logo">
       <%= link_to image_tag("/images/iwyg_logo.png"), root_path %>
     </div>
-    <%= render :partial => 'share/search' %>
+    <%= render :partial => 'share/search', :locals => { :search => @search } %>
     <div id="mainnavigation">
       <ul class="menu horizontal">
         <li id="resources"><%= link_to_unless_current t("menu.main.resources"), items_path %>
