--- a/app/views/share/_search.html.erb
+++ b/app/views/share/_search.html.erb
@@ -1,38 +1,46 @@
-<div id="search">
-  <div id="searchform">
-  <%= form_for $search, :url => items_path, :method => "get" do |f| %>
-    
-    <%= f.text_field :title_like_any  %> 
-            
-    <div id="searchextended" class="ui-corner-all">
-      <h3 class="bold"><%= t("searchOptions").html_safe %></h3>
-      <table>
-        <tr>
-          <td class="font-small"><%= t("resources.available").html_safe %><br /> (<%= t("from") %> - <%= t("till") %>)</td>
-          <td class="row-big">
-            <%= f.text_field :from_gte, :id => "from", :size => 8 %> - 
-            <%= f.text_field :till_lte, :id => "till", :size => 8 %>
-          </td>
-        </tr>
-        <tr>
-          <td class="font-small"><%= t("resources.amount") %></td>
-          <td class="row-big">
-            <%= f.text_field :amount_equals, :id => "amount", :size => 8 %> &nbsp; 
-            <%= f.collection_select :measure_id_equals, @measures, "id", "title", :include_blank => true %>
-          </td>
-        </tr>
-        <tr>
-          <td class="font-small"><%= t("searchIn") %></td>
-          <td class="row-big">
-            <%= f.collection_select :item_type_id_equals, @itemtypes, :id, :localized_title, :include_blank => true %>
-          </td>
-        </tr>
-      </table>
-    </div>
-    <%= f.submit "Go", :name => nil %>
+<div id="search">                              
+<div id="searchform">
+<%= form_tag @search, :method => :get do %>
+<% if params[:controller] == "items" %>
+  <%= text_field_tag :title_contains  %>
+  <div id="searchextended" class="ui-corner-all">
+    <h3 class="bold"><%= t("searchOptions").html_safe %></h3>
+    <table>
+      <tr>
+        <td class="font-small"><%= t("resources.available").html_safe %><br /> (<%= t("from") %> - <%= t("till") %>)</td>
+        <td class="row-big">
+        <%= text_field_tag :from_gte, '', {:id => "from", :size => 8} %> -
+        <%= text_field_tag :till_lte, '', {:id => "till", :size => 8} %>
+        </td>
+      </tr>
+      <tr>
+        <td class="font-small"><%= t("resources.amount") %></td>
+        <td class="row-big">
+        <%= text_field_tag :amount_equals, '', {:id => "amount", :size => 8} %> &nbsp;
+        <%= select_tag(:measure_id_equals, options_from_collection_for_select(@measures, :id, :title), :include_blank => true) %>
+        </td>
+      </tr>
+      <tr>
+        <td class="font-small"><%= t("searchIn") %></td>
+        <td class="row-big">
+        <%= select_tag( :item_type_id_equals, options_from_collection_for_select(@itemtypes, :id, :localized_title), :include_blank => true) %>
+        <%# f.collection_select :item_type_id_equals, @itemtypes, :id, :localized_title, :include_blank => true %>
+        </td>
+      </tr>
+    </table>
+  </div>
+
+  <% elsif params[:controller] == "users" %>
+
+    <%= text_field_tag :login_contains  %>
+
   <% end %>
-  </div>
-  <div id="searchmenu">
+  <%= submit_tag "Go", :name => nil %>
+  <% end %>
+  </div>                                     
+  <% if params[:controller] == "items" %>
+    <div id="searchmenu">
       <a href="#" id="advanced_search" class="icon-arrow-down"><%= t("options") %></a>
-  </div>
-</div>
+    </div>                                 
+  <% end %>
+</div> 
