--- a/app/views/share/_tags.rhtml
+++ b/app/views/share/_tags.rhtml
@@ -1,4 +1,4 @@
  <% if @tag and @tagtype %>
-   <span class="font-smaller"> <%= t("with") %> <%= @tagtype %>: <i><%= @tag %></i> | </span>
+   <span> <%= t("with") %> <%= @tagtype %>: <i><%= @tag %></i> | </span>
   <% end %>
   
